--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,33 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCPP
+
+[/Script/UnrealEd.EditorExperimentalSettings]
+bProceduralFoliage=False
+bEnableLocalizationDashboard=False
+bEnableTranslationPicker=False
+bEnableEditorUtilityBlueprints=False
+bUnifiedBlueprintEditor=True
+bBlueprintableComponents=True
+bActorMerging=False
+bDeviceOutputLog=False
+ConsoleForGamepadLabels=None
+bToolbarCustomization=False
+bBreakOnExceptions=False
+bBlueprintPerformanceAnalysisTools=False
+BlueprintProfilerAverageSampleCount=20
+bEnableWidgetVisualDiff=False
+bEnableAnimVisualDiff=False
+bEnableFindAndReplaceReferences=False
+bDrawMidpointArrowsInBlueprints=False
+bShowAudioStreamingOptions=False
+bContextMenuChunkAssignments=False
+bDisableCookInEditor=False
+MultiProcessCooking=0
+bEQSEditor=True
+bLiveStreamingFromEditor=False
+bFeatureLevelES31Preview=False
+bEnableMultithreadedLightmapEncoding=False
+bEnableMultithreadedShadowmapEncoding=False
+bUseOpenCLForConvexHullDecomp=False
+
+
